kubernetes/canary/regular/services.yml
apiVersion: v1
kind: Service
metadata:
  name: regular
  namespace: angular-days-2021-canary-regular
spec:
  selector:
    app: frontend-v1
  ports:
    - port: 8080
      targetPort: 80
